# repomedic

./: .gitignore  Makefile  README.md  bitbucket-pipelines.yml  pyproject.toml
examples/: config.json
src/repomedic/: actions.py  analyzer.py  cli.py  engine.py  github_api.py  models.py  scoring.py
src/repomedic/providers/: __init__.py  base.py  bitbucket.py  github.py  gitlab.py
