[project]
name = "repomedic"
version = "0.1.0"
description = "Scan GitHub repos for stale/blocked issues and PRs; draft actionable next steps."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyGithub>=2.3.0",
  "typer>=0.12.3",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "python-dateutil>=2.9.0",
]

[project.scripts]
repomedic = "repomedic.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
